--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vscode-it-runner",
   "displayName": "it Runner",
   "description": "Runs tests written with the it framework",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/janmonterrubio/vscode-it-runner"
@@ -66,10 +66,11 @@
     "build": "webpack --mode development",
     "watch": "webpack --mode development --watch",
     "package": "webpack --mode production --devtool hidden-source-map",
-    "eslint:fix": "eslint --cache --fix",
-    "prettier": "prettier --write"
+    "eslint:fix": "eslint --cache --fix",g
+    "test": "jest"
   },
   "devDependencies": {
+    "@jest/globals": "^29.5.0",
     "@types/glob": "^7.2.0",
     "@types/mocha": "^9.1.1",
     "@types/node": "16.x",
@@ -79,7 +80,11 @@
     "@vscode/test-electron": "^2.1.5",
     "eslint": "^8.20.0",
     "glob": "^8.0.3",
+    "it": "^1.1.1",
+    "jest": "^29.5.0",
     "mocha": "^10.0.0",
+    "prettier": "^2.8.8",
+    "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.3",
     "typescript": "^4.7.4",
     "webpack": "^5.84.1",
