--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vscode-it-runner",
   "displayName": "it Runner",
   "description": "Runs tests written with the it framework",
-  "version": "0.2.0",
+  "version": "0.2.0g",
   "repository": {
     "type": "git",
     "url": "https://github.com/janmonterrubio/vscode-it-runner"
@@ -66,7 +66,7 @@
     "build": "webpack --mode development",
     "watch": "webpack --mode development --watch",
     "package": "webpack --mode production --devtool hidden-source-map",
-    "eslint:fix": "eslint --cache --fix",g
+    "eslint:fix": "eslint --cache --fix",
     "test": "jest"
   },
   "devDependencies": {
