--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "vscode-it-runner",
-  "displayName": "it Runner",
-  "description": "Runs tests written with the it framework",
-  "version": "0.2.1",
+  "displayName": "it-runner",
+  "description": "Runs tests written with doug-martin/it.",
+  "version": "0.2.2",
   "repository": {
     "type": "git",
     "url": "https://github.com/janmonterrubio/vscode-it-runner"
